# super_mario_maker_1_int_ids_to_course_ids

./: .gitignore  README.md  cli.py  pyproject.toml
example_course_id_lists/: event_courses.txt  event_courses_results.txt  test.txt
super_mario_maker_1_int_ids_to_course_ids/: application.py  main.py  model.py  utils.py
